--- a/argo/deployment.yml
+++ b/argo/deployment.yml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: nginx
-          image: nginx:latest
+          image: manojvinay/samoplexy:latest
           ports:
             - containerPort: 80
